--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,7 @@ $navbar-default-bg: $light-orange;
 .card.hovercard {
     position: relative;
     padding-top: 0;
+    margin-top: 0;
     overflow: hidden;
     text-align: center;
     background-color: #fff;
@@ -82,7 +83,7 @@ $navbar-default-bg: $light-orange;
     padding:0 5px;
     font-size: 20px;
     line-height: 1;
-    color: #262626;
+    color: #FFFFFF;
     background-color: rgba(255, 255, 255, 0.1);
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
