--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -2,6 +2,10 @@
   <div class="tab-content">
     <div class="tab-pane fade in active" id="tab1">
       <h3>This is tab 1</h3>
+      <%= form_tag({:action => 'upload_data'}, :multipart => true, :name => 'upload_xlxs') do %>
+         <label for="uploaded_file">File to Upload <%= file_field_tag 'uploaded_file', :accept => 'xls/xlxs'%></label>
+         <%= submit_tag("Submit") %>
+      <% end %>
     </div>
     <div class="tab-pane fade in" id="tab2">
       <h3>This is tab 2</h3>
