--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -1,17 +1,25 @@
 <div class="well">
   <div class="tab-content">
+
     <div class="tab-pane fade in active" id="tab1">
+      <h3>This is tab 3</h3>
+      <ul>
+      <% @exams.each do |exam| %>
+        <li> <%= link_to exam.name, exam_url(exam) %></li>
+      <% end %>
+      </ul>
+      <%= will_paginate @exams %>
+    </div>
+    <div class="tab-pane fade in" id="tab2">
+      <h3>This is tab 2</h3>
+    </div>
+    
+    <div class="tab-pane fade in" id="tab3">
       <h3>This is tab 1</h3>
       <%= form_tag({:action => 'upload_data'}, :multipart => true, :name => 'upload_xlxs') do %>
          <label for="uploaded_file">File to Upload <%= file_field_tag 'uploaded_file', :accept => 'xls/xlxs'%></label>
          <%= submit_tag("Submit") %>
       <% end %>
-    </div>
-    <div class="tab-pane fade in" id="tab2">
-      <h3>This is tab 2</h3>
-    </div>
-    <div class="tab-pane fade in" id="tab3">
-      <h3>This is tab 3</h3>
     </div>
   </div>
 </div>
