--- a/app/views/exams/booklet.html.erb
+++ b/app/views/exams/booklet.html.erb
@@ -1,6 +1,6 @@
 <h4><%= @exam.name %></h4>
 <table><tr><th>Q no.</th><th>A</th><th>B</th><th>C</th><th>D</th></tr>
-<%= form_tag ({:action => 'booklet_create'}) do %>
+<%= form_tag ({:action => 'exam_result'}) do %>
 <% for no in 1..100 %>
   <tr><td><%= no %></td>
   <td><%= radio_button_tag "q_num[#{no}][answer]", "A" %></td>
