--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,6 +81,7 @@
              <%= yield %>
            </div>
       <div class="tab-pane fade in" id="tab2">
+        <%= render partial: "attempts" %>
       </div>
 
       <div class="tab-pane fade in" id="tab3">
