--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,42 +60,39 @@
     </div>
     <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
         <div class="btn-group" role="group">
-            <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+            <%= link_to (raw (%|<button type="button" id="stars" class="btn #{controller.controller_name == "exams" ? "btn-primary" : "btn-default"}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                 <div class="hidden-xs">Exams</div>
-            </button>
+            </button>|)), exams_url %>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+            <%= link_to (raw (%|<button type="button" id="favorites" class="btn #{controller.controller_name == "attempts" ? "btn-primary" : "btn-default"}"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
                 <div class="hidden-xs">Attempted</div>
-            </button>
+            </button>|)), attempts_url %>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+            <button type="button" id="following" class="btn btn-default"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                 <div class="hidden-xs">Acheivements</div>
             </button>
         </div>
     </div>
       <div class="well">
         <div class="tab-content">
-           <div class="tab-pane fade in active" id="tab1">
+           <div class="tab-pane fade in active">
              <%= yield %>
            </div>
-      <div class="tab-pane fade in" id="tab2">
-        <%= render partial: "attempts" %>
+     <!--  <div class="tab-pane fade in active" id="tab2">
+        <%# render partial: "attempts" %>
       </div>
 
       <div class="tab-pane fade in" id="tab3">
-        <%= form_tag({:action => 'upload_data'}, :multipart => true, :name => 'upload_xlxs') do %>
-           <label for="uploaded_file">File to Upload <%= file_field_tag 'uploaded_file', :accept => 'xls/xlxs'%></label>
-           <%= submit_tag("Submit") %>
-        <% end %>
+        <%# form_tag({:action => 'upload_data'}, :multipart => true, :name => 'upload_xlxs') do %>
+           <label for="uploaded_file">File to Upload <%# file_field_tag 'uploaded_file', :accept => 'xls/xlxs'%></label>
+           <%# submit_tag("Submit") %>
+        <%# end %>
+      </div> -->
       </div>
       </div>
-      </div>
-    
     </div>
-
-
 </body>
 </html>
 </html>
