--- a/app/views/exams/exam_result.html.erb
+++ b/app/views/exams/exam_result.html.erb
@@ -2,4 +2,5 @@
 Correct Answers <%= @correct_count %><br />
 Wrong Answers <%= @wrong_count %><br />
 Score <%= @mark %><br />
-Sign in with facebook to show rank
+<h4>Know your rank</h4>
+<%= link_to image_tag("fb_login.png"), 'auth/facebook' %>
