--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kpsc</title>
+  <title>Kerala PSC Ranklist</title>
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -17,20 +18,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">KPSC Ranklist</a>
+      <a class="navbar-brand" style="font-family: 'Lobster', cursive;" href="#">Kerala PSC Ranklist</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      
-      <form class="navbar-form navbar-left" role="search">
+     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+     <%= search_form_for @q, html: {class: "navbar-form navbar-left"} do |f| %>
+     <div class="form-group">
+      <%= f.search_field :name_cont, class: "form-control" %>
+     </div>
+      <%= f.submit "Exam Search", class: "btn btn-default" %>
+      <% end %> 
+      <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
         </button>
-      </form>
+      </form> -->
       
         <ul class="nav navbar-nav navbar-right">
             <li style="padding:12px;padding-right:50px;">
@@ -70,9 +76,9 @@
             </button>|)), attempts_url %>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" id="following" class="btn btn-default"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                <div class="hidden-xs">Acheivements</div>
-            </button>
+            <%= link_to (raw (%|<button type="button" id="stars" class="btn #{controller.controller_name == "ranklists" ? "btn-primary" : "btn-default"}"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                <div class="hidden-xs">Ranklist</div>
+            </button>|)), ranklists_url %>
         </div>
     </div>
       <div class="well">
