--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,13 @@
         </div>
     </div>
     <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+        <% if current_user.role == "admin" %>
+        <div class="btn-group" role="group">
+            <%= link_to (raw (%|<button type="button" id="stars" class="btn #{controller.controller_name == "admin" ? "btn-primary" : "btn-default"}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <div class="hidden-xs">Admin</div>
+            </button>|)), admin_index_url %>
+        </div>
+        <% end %>
         <div class="btn-group" role="group">
             <%= link_to (raw (%|<button type="button" id="stars" class="btn #{controller.controller_name == "exams" ? "btn-primary" : "btn-default"}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                 <div class="hidden-xs">Exams</div>
@@ -91,10 +98,7 @@
       </div>
 
       <div class="tab-pane fade in" id="tab3">
-        <%# form_tag({:action => 'upload_data'}, :multipart => true, :name => 'upload_xlxs') do %>
-           <label for="uploaded_file">File to Upload <%# file_field_tag 'uploaded_file', :accept => 'xls/xlxs'%></label>
-           <%# submit_tag("Submit") %>
-        <%# end %>
+        
       </div> -->
       </div>
       </div>
