--- a/app/views/ranklists/index.html.erb
+++ b/app/views/ranklists/index.html.erb
@@ -1,3 +1,7 @@
-<%= render partial: 'user_rank' %>
-</div>
-<%= will_paginate @user_exams %>
+<%if current_user.role == 'normal' %>
+	<%= render partial: 'user_rank' %>
+	</div>
+	<%= will_paginate @user_exams %>
+<% else %>
+	<%= link_to image_tag("fb_login.png", style: "display: block;margin-left:auto;margin-right:auto;") %>
+<% end %>
