FB comment added

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -26,3 +26,5 @@
 	  <%= submit_tag("Submit") %>
 	<% end %>
 <% end %>
+
+<div class="fb-comments" data-href=<%= "http://104.131.23.16/exams/#{@exam.id}" %> data-numposts="5"></div>
