domain name added

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -27,4 +27,4 @@
 	<% end %>
 <% end %>
 
-<div class="fb-comments" data-href=<%= "http://104.131.23.16/exams/#{@exam.id}" %> data-numposts="5"></div>
+<div class="fb-comments" data-href=<%= "http://pscranklist.in/exams/#{@exam.id}" %> data-numposts="5"></div>
