--- a/app/views/exams/exam_result.html.erb
+++ b/app/views/exams/exam_result.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "#{@exam.name} Result" %>
 <h2><%= @exam.name %></h2>
 <table class="table table-striped">
 <tr><th>Correct Answers</th><th><%= @correct_count %></th></tr>
