--- a/app/views/ranklists/index.html.erb
+++ b/app/views/ranklists/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Kerala PSC Rank List" %>
 <%if current_user.role == 'normal' %>
 	<%= render partial: 'user_rank' %>
 	</div>
