--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Kerala PSC Rank List" %>
 <ul>
 <% @exams.each do |exam| %>
   <li> <%= link_to exam.name, exam_url(exam) %></li>
