--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kerala PSC Ranklist</title>
+  <title><%= yield(:title) ? yield(:title) : "Kerala PSC Rank List" %></title>
   <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -39,7 +39,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" style="font-family: 'Lobster', cursive;" href="#">Kerala PSC Ranklist</a>
+      <a class="navbar-brand" style="font-family: 'Lobster', cursive;" href="#">Kerala PSC Rank List</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
