title small change

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "#{@exam.name} #{@exam.exam_type}" %>
+<% content_for :title, "#{@exam.name} #{@exam.exam_type} Rank List" %>
 <h2><%= @exam.name %></h2>
 <h4><%= @exam.exam_type %></h4>
 <h4><%= @exam.code %></h4>
