--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -21,11 +21,13 @@
 	
 
 <% else %>
-	<%= form_tag({:action => 'booklet'}) do %>
-	  <label for="Booklet">Select Booklet <%= select_tag :booklet, options_for_select(["A","B","C","D"]) %></label>
-	  <%= hidden_field_tag :exam_id, @exam.id %>
-	  <%= submit_tag("Submit") %>
-	<% end %>
+  <div class="form-group">
+  	<%= form_tag({:action => 'booklet'}) do %>
+  	  <label for="Booklet" class="btn btn-info" >Select Booklet <%= select_tag :booklet, options_for_select(["A","B","C","D"]),class: 'form-control' %></label>
+  	  <%= hidden_field_tag :exam_id, @exam.id %>
+  	  <%= submit_tag("Submit", class: 'btn btn-primary') %>
+  	<% end %>
+  </div>
 <% end %>
 
 <div class="fb-comments" data-href=<%= "http://pscranklist.in/exams/#{@exam.id}" %> data-numposts="5"></div>
